View Issue Details

IDProjectCategoryView StatusLast Update
0023316Open CASCADEOCCT:Visualizationpublic2012-11-16 13:17
ReportervtnAssigned Tokgv  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformLinuxOSRedHat40-64 
Product Version6.5.4 
Target Version6.5.4Fixed in Version6.5.4 
Summary0023316: OpenGl package can not be compiled on RedHat40-64
DescriptionThere are errors during compilation of OpenGl_GraphicDriver_713.cxx:

../../../inc/OpenGl_GlCore20.hxx:31: error: `PFNGLBLENDEQUATIONSEPARATEPROC' does not name a type
../../../inc/OpenGl_GlCore20.hxx:32: error: `PFNGLDRAWBUFFERSPROC' does not name a type
...............
TagsNo tags attached.
Test case numberNot needed

Activities

vtn

2012-07-18 12:25

developer   ~0021040

The GIT repository was CR23273.

vtn

2012-07-18 17:42

developer   ~0021054

The problem is reproduced on pandex (Red Hat Enterprise Linux WS release 4 (Nahant Update 6))

kgv

2012-09-21 16:27

developer   ~0021533

Patch is ready for review in CR23316 branch

san

2012-09-24 20:39

developer   ~0021547

Branch CR23316 reviewed without remarks, ready for testing.

mkv

2012-09-26 15:45

tester   ~0021567

Dear BugMaster,
Branch CR23316 (and products from GIT master) was compiled on Linux and Windows platforms and tested.

Regression:
Not detected

Improvements:
Not detected

Testing case:
Not needed

bugmaster

2012-09-26 18:04

administrator   ~0021571

Kiril,

I tried CR23316 on RedHat40-64. The compilation problem is reproduced till now.

then mv -f ".deps/Image_PlanarPixelInterpolation.Tpo" ".deps/Image_PlanarPixelInterpolation.Plo"; else rm -f ".deps/Image_PlanarPixelInterpolation.Tpo"; exit 1; fi
../../../src/Image/Image_PixMap.cxx:23:25: mm_malloc.h: No such file or directory
../../../src/Image/Image_PixMap.cxx: In function `TypePtr MemAllocAligned(const Standard_Size&, const Standard_Size&)':
../../../src/Image/Image_PixMap.cxx:33: error: there are no arguments to `_mm_malloc' that depend on a template parameter, so a declaration of `_mm_malloc' must be available
../../../src/Image/Image_PixMap.cxx:33: error: (if you use `-fpermissive', G++ will accept your code, but allowing the use of an undeclared name is deprecated)
../../../src/Image/Image_PixMap.cxx: In function `void MemFreeAligned(void*)':
../../../src/Image/Image_PixMap.cxx:42: error: `_mm_free' was not declared in this scope
../../../src/Image/Image_PixMap.cxx: In function `TypePtr MemAllocAligned(const Standard_Size&, const Standard_Size&) [with TypePtr = Standard_Byte*]':
../../../src/Image/Image_PixMap.cxx:165: instantiated from here
../../../src/Image/Image_PixMap.cxx:33: error: `_mm_malloc' was not declared in this scope
make[2]: *** [Image_PixMap.lo] Error 1

kgv

2012-09-26 18:22

developer   ~0021572

Dear Bugmaster, please look 0023425 for compilation errors fixed in Image_PixMap.
This BUG unrelated to these problems.

Related Changesets

occt: master 3695b8c2

2012-09-21 12:27:23

kgv

Details Diff
0023316: OpenGl package can not be compiled on RedHat40-64

OpenGl_Window avoid early unprotected glx.h inclusion
which may cause system glext.h inclusion
Affected Issues
0023316
mod - src/OpenGl/OpenGl_Window.hxx Diff File

Issue History

Date Modified Username Field Change
2012-07-18 12:22 vtn New Issue
2012-07-18 12:22 vtn Assigned To => kgv
2012-07-18 12:25 vtn Note Added: 0021040
2012-07-18 12:25 vtn Status new => assigned
2012-07-18 17:42 vtn Note Added: 0021054
2012-09-14 18:23 bugmaster Status assigned => feedback
2012-09-21 16:27 kgv Note Added: 0021533
2012-09-21 16:27 kgv Assigned To kgv => san
2012-09-21 16:27 kgv Status feedback => resolved
2012-09-24 20:39 san Note Added: 0021547
2012-09-24 20:39 san Assigned To san => bugmaster
2012-09-24 20:39 san Status resolved => reviewed
2012-09-26 15:45 mkv Note Added: 0021567
2012-09-26 15:46 mkv Test case number => Not needed
2012-09-26 15:46 mkv Status reviewed => tested
2012-09-26 18:04 bugmaster Note Added: 0021571
2012-09-26 18:04 bugmaster Assigned To bugmaster => kgv
2012-09-26 18:04 bugmaster Status tested => assigned
2012-09-26 18:22 kgv Note Added: 0021572
2012-09-26 18:23 kgv Assigned To kgv => bugmaster
2012-09-26 18:23 kgv Status assigned => resolved
2012-09-27 11:54 bugmaster Status resolved => reviewed
2012-09-27 11:54 bugmaster Status reviewed => tested
2012-10-01 13:30 kgv Changeset attached => occt master 3695b8c2
2012-10-01 13:31 kgv Assigned To bugmaster => kgv
2012-10-01 13:31 kgv Status tested => verified
2012-10-01 13:31 kgv Resolution open => fixed
2012-11-16 13:14 bugmaster Fixed in Version => 6.5.4
2012-11-16 13:17 bugmaster Status verified => closed