0023316: OpenGl package can not be compiled on RedHat40-64

OpenGl_Window avoid early unprotected glx.h inclusion
which may cause system glext.h inclusion